--- a/AEM.css
+++ b/AEM.css
@@ -8,6 +8,8 @@
 :root{
     --color1: #D89584;
     --color2: #f4f4f4;
+    --color3: #f4f4f4;
+    --color4: black;
 }
 body{
     margin: 0;
@@ -17,7 +19,7 @@ body{
 
 div.cover
 {
-    background: url(Images/image.png) no-repeat center/cover;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Images/image.jpg) no-repeat center/cover;
 }
 img.sans{
     height: 90px;
@@ -40,14 +42,14 @@ img.sans1{
     font-size: 14px;
 }
 h1{
-    color: white;
+    color: var(--color3);
     text-align: center;
     font-size: 40px;
     margin-top: 4px;
     margin-bottom: 0px;
 }
 div.cover p{
-    color: lightgray;
+    color: var(--color3);
     text-align: center;
 }
 div.cover-contact
@@ -61,6 +63,7 @@ div.cover-contact
     overflow: auto;
 }
 div.cover-contact p {
+    color: var(--color3);
     text-align: left;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -72,7 +75,7 @@ div.cover-contact p:first-child
 }
 div.cover-contact a 
 {
-    color: white;
+    color: var(--color3);
     font-size: 14px;
 }
 a.contact-button
@@ -81,7 +84,7 @@ a.contact-button
     border: 3px solid var(--color1);
     padding: 8px 20px;
     text-decoration: none;
-    background-color: #00000040;
+    background-color: black;
     display: inline-block;
     margin-top: 2px;
     font-size: 14px;
@@ -174,7 +177,7 @@ div.gris2
 {
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #979797;
+    background-color: var(--color2);
     overflow: auto;
 }
 td.lien{
@@ -208,7 +211,7 @@ div.frame
 }
 .men1
 {
-    background-color:#979797;
+    background-color: var(--color2);;
     padding-top: 40px;
     padding-bottom: 20px;
     margin-left: 20px;
@@ -245,7 +248,7 @@ div.frame
     }
     div.section-gris1 p{
         font-size: 15px;
-        color: #656565;
+        color: black;
         text-align: center;
         max-width: 450px;
         margin-left: auto;
@@ -294,13 +297,13 @@ h2
 div.gris2
 {
     padding-left: 10px;
-    background-color: #979797;
+    background-color: var(--color2);
     overflow: auto;
 }
 div.gris2
 {
     padding-left: 20px;
-    background-color: #979797;
+    background-color: var(--color2);
     
 }
 td.lien{
